# mHost

./: .gitignore  AGENTS.md  CLAUDE.md  PR5_CODE_REVIEW.md  index.html  package.json  perf_review_report.md  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
concept/mHost/: mHost.html  menubar-prototype.html  prototype-v2.html  prototype.html
doc/: build-and-version.md  dev-guide.md  poster.md
doc/requirements/: design-option-a.html  feature-2-3-rollback-backup-plan.md  feature-4-search-replace-plan.md  feature-5-duplicate-rules-plan.md  feature-snapshot-plan.md  hosts-tools-feature-breakdown.md  issue-55-ui-redesign-option-a.md  stage1-2-sprint-plan.md
doc/tech/: Creem_License_订阅付费集成完整指南.md  GitHub-Release-同步指南.md  dns-mode-development-plan.md  dns-mode-tech-design.md  rust-tauri-hosts-tech-route.md
spec/: menubar-plan.md  phase-0-plan.md  phase-1-plan.md
src/: App.css  App.css.d.ts  App.test.tsx  App.tsx  css.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/mhost-apply/: Cargo.toml
src-tauri/crates/mhost-apply/src/: conflict.rs  diff.rs  integration_tests.rs  lib.rs  merge.rs  writer.rs
src-tauri/crates/mhost-apply/src/platform/: macos.rs  mod.rs
src-tauri/crates/mhost-apply/src/writer/: backup.rs  content.rs  mod.rs  tests.rs  verification.rs
src-tauri/crates/mhost-core/: Cargo.toml
src-tauri/crates/mhost-core/src/: error.rs  models.rs
src-tauri/crates/mhost-dns/: Cargo.toml
src-tauri/crates/mhost-dns/src/: config.rs  lib.rs  platform.rs  proxy.rs  resolver.rs  server.rs
src-tauri/crates/mhost-hosts/: Cargo.toml
src-tauri/crates/mhost-hosts/src/: formatter.rs  lib.rs  parser.rs  validator.rs
src-tauri/crates/mhost-storage/: Cargo.toml
src-tauri/crates/mhost-storage/src/: lib.rs  manifest.rs  migration.rs  storage.rs
src-tauri/src/: lib.rs  main.rs  tray.rs  tray_logic.rs
src-tauri/src/commands/: apply.rs  dns.rs  integration_tests.rs  io.rs  mod.rs  profile.rs  profile_io.rs  snapshot.rs  update.rs  validate.rs
src-tauri/src/platform/: macos.rs
src-tauri/src/state/: mod.rs
src/components/: ApplyConfirmDialog.module.css  ApplyConfirmDialog.tsx  ApplyStatus.module.css  ApplyStatus.tsx  BackupPanel.module.css  BackupPanel.tsx  BasicInfoForm.tsx  CreateProfileDialog.module.css  CreateProfileDialog.tsx  CreateProfileForm.tsx  DiffView.module.css  DiffView.tsx  DnsProfileList.module.css  DnsProfileList.tsx  DnsProfileView.tsx  DrawerProfileCard.tsx  HostsProfileView.tsx  ImportDialog.module.css  ImportDialog.tsx  Layout.module.css  Layout.tsx  ManagementDrawer.module.css  ManagementDrawer.tsx  ProfileCard.tsx  QuickApplyToast.module.css  QuickApplyToast.tsx  RollbackButton.module.css  RollbackButton.tsx  RuleEditor.module.css  RuleEditor.tsx  RuleList.tsx  SearchBar.module.css  SearchBar.tsx  Sidebar.tsx  SnapshotPanel.module.css  SnapshotPanel.tsx  StatusBar.module.css  StatusBar.tsx
src/components/__tests__/: ApplyConfirmDialog.test.tsx  ApplyStatus.test.tsx  BackupPanel.test.tsx  CreateProfileDialog.test.tsx  DnsProfileList.test.tsx  ImportDialog.test.tsx  Layout.test.tsx  ManagementDrawer.test.tsx  RollbackButton.test.tsx  RuleEditor.test.tsx  SearchBar.test.tsx  Sidebar.test.tsx  SnapshotPanel.test.tsx  StatusBar.test.tsx
src/hooks/: useWebKitPointerDown.ts
src/lib/: applyPolicy.ts  atomWithLocalStorage.ts  error.ts  escape.ts  highlightHosts.ts  rules.ts  search.ts  tauri.ts
src/lib/__tests__/: applyPolicy.test.ts  atomWithLocalStorage.test.ts  error.test.ts  escape.test.ts  highlightHosts.test.ts  rules.test.ts
src/pages/: Backup.module.css  Backup.tsx  ProfileEdit.module.css  ProfileEdit.tsx  ProfileList.module.css  ProfileList.tsx  ProfileView.module.css  ProfileView.tsx  Settings.module.css  Settings.tsx  Snapshot.module.css  Snapshot.tsx  SystemHosts.module.css  SystemHosts.tsx
src/pages/__tests__/: ProfileView.test.tsx  Settings.test.tsx  SystemHosts.test.tsx
src/stores/: profiles.ts
src/stores/__tests__/: profiles.test.ts
src/stores/profiles/: actions.ts  index.ts  state.ts
src/styles/: global.css  hostsHighlight.css  zindex.ts
src/types/: index.ts
src/types/__tests__/: types.test.ts
