[workspace]
members = [".", "crates/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tempfile = "3.10"
dirs = "5"
parking_lot = "0.12"

[package]
name = "mhost"
version = "0.1.0"
description = "mHost - A lightweight cross-platform hosts manager"
authors = ["gevin"]
edition = "2021"

[lib]
name = "mhost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mhost-core = { path = "crates/mhost-core" }
mhost-hosts = { path = "crates/mhost-hosts" }
mhost-storage = { path = "crates/mhost-storage" }
mhost-apply = { path = "crates/mhost-apply" }
mhost-dns = { path = "crates/mhost-dns" }
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSResponder"] }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
filetime = "0.2"
hickory-proto = "0.24"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
