[package]
name = "mhost-apply"
version = "0.1.0"
edition = "2021"

[dependencies]
mhost-core = { path = "../mhost-core" }
mhost-hosts = { path = "../mhost-hosts" }
uuid = { version = "1.8", features = ["v4"] }
chrono = { workspace = true }
dirs = "5.0"
tempfile = "3.10"

[dev-dependencies]
mhost-storage = { path = "../mhost-storage" }
