[package]
name = "mhost-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
mhost-core = { path = "../mhost-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
hickory-proto = "0.24"
thiserror = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
