[package]
name = "mhost-dns"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mhost-dns-proxy"
path = "src/bin/dns_proxy.rs"

[dependencies]
mhost-core = { path = "../mhost-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
hickory-proto = "0.24"
thiserror = { workspace = true }
tracing = "0.1"
lru = "0.12"
dirs = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
