[package]
name = "mhost-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
mhost-core = { path = "../mhost-core" }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
